Pascal/pidigits/gmp.pas


// No docs: function mpn_divrem_2(_para1: mpn_t; _para2: mp_size_t; _para3: mpn_t; _para4: mp_size_t; _para5: mpn_t): mp_limb_t; cdecl; external LIB name '__gmpn_divrem_2';

{ Set [rp, retval] to the greatest common divisor of [s1p, s1n] and [s2p, s2n] }
function mpn_gcd(rp, s1p: mpn_ptr; s1n: mp_size_t; s2p: mpn_ptr; s2n: mp_size_t): mp_size_t; cdecl; external LIB name '__gmpn_gcd';
{ Return the greatest common divisor of [s1p, s1n] and s2limb }
function mpn_gcd_1(s1p: mpn_ptr; s1n: mp_size_t; s2limb: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_gcd_1';
{ Calculate the greatest common divisor of [s1p, s1n] and [s2p, s2n] }
function mpn_gcdext(r1p, r2p: mpn_ptr; out r2n: mp_size_t; s1p: mpn_ptr; s1n: mp_size_t; s2p: mpn_ptr; s2n: mp_size_t): mp_size_t; cdecl; external LIB name '__gmpn_gcdext';
{ Convert [s1p, s1n] to a raw unsigned char array at str in base base, and return the number of characters produced }
function mpn_get_str(str: pbyte; base: longint; s1p: mpn_ptr; s1n: mp_size_t):sizeuint; cdecl; external LIB name '__gmpn_get_str';
{ Compute the hamming distance between [s1p, n] and [s2p, n], which is the number of bit positions where the two operands have different bit values }
function mpn_hamdist(s1p, s2p: mpn_ptr; n: mp_size_t): valuint; cdecl; external LIB name '__gmpn_hamdist';
{ Shift [sp, n] left by count bits, and write the result to [rp, n] }
function mpn_lshift(rp, sp: mpn_ptr; n: mp_size_t; count: dword): mp_limb_t; cdecl; external LIB name '__gmpn_lshift';
{ Divide [s1p, s1n] by s2limb, and return the remainder. s1n can be zero. }
function mpn_mod_1(s1p: mpn_ptr; s1n: mp_size_t; s2limb: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_mod_1';
{ Multiply [s1p, s1n] and [s2p, s2n], and write the result to rp. Return the most significant limb of the result. }
function mpn_mul(rp, s1p: mpn_ptr; s1n: mp_size_t; s2p: mpn_ptr; s2n: mp_size_t): mp_limb_t; cdecl; external LIB name '__gmpn_mul';
{ Multiply [s1p, n] by s2limb, and write the n least significant limbs of the product to rp. Return the most significant limb of the product. }
function mpn_mul_1(rp, s1p: mpn_ptr; n: mp_size_t; s2limb: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_mul_1';
{ Multiply [s1p, n] and [s2p, n], and write the 2*n-limb result to rp }
procedure mpn_mul_n(rp, s1p, s2p: mpn_ptr; n: mp_size_t); cdecl; external LIB name '__gmpn_mul_n';
{ Return non-zero iff [s1p, n] is a perfect square }
function mpn_perfect_square_p(s1p: mpn_ptr; n: mp_size_t): longint; cdecl; external LIB name '__gmpn_perfect_square_p';
{ Count the number of set bits in [s1p, n] }
function mpn_popcount(s1p: mpn_ptr; n: mp_size_t): valuint; cdecl; external LIB name '__gmpn_popcount';

// No docs: function mpn_pow_1(_para1, _para2: mpn_t; _para3: mp_size_t; _para4, _para5: mpn_t): mp_size_t; cdecl; external LIB name '__gmpn_pow_1';
// No docs: function mpn_preinv_mod_1(_para1: mpn_t; _para2: mp_size_t; _para3, _para4: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_preinv_mod_1';

{ Generate a random number of length r1n and store it at r1p }
procedure mpn_random(r1p: mpn_ptr; r1n: mp_size_t); cdecl; external LIB name '__gmpn_random';
{ Generate a random number of length r1n and store it at r1p }
procedure mpn_random2(r1p: mpn_ptr; r1n: mp_size_t); cdecl; external LIB name '__gmpn_random2';
{ Shift [sp, n] right by count bits, and write the result to [rp, n] }
function mpn_rshift(rp, sp: mpn_ptr; n: mp_size_t; count: dword): mp_limb_t; cdecl; external LIB name '__gmpn_rshift';
{ Scan s1p from bit position bit for the next clear bit }
function mpn_scan0(s1p: mpn_ptr; bit: valuint): valuint; cdecl; external LIB name '__gmpn_scan0';
{ Scan s1p from bit position bit for the next set bit }
function mpn_scan1(s1p: mpn_ptr; bit: valuint): valuint; cdecl; external LIB name '__gmpn_scan1';
{ Convert bytes [str,strsize] in the given base to limbs at rp }
function mpn_set_str(rp: mpn_ptr; str: pbyte; strsize: sizeuint; base:longint): mp_size_t; cdecl; external LIB name '__gmpn_set_str';
{ Compute the square root of [sp, n] and put the result at [r1p, dn/2e] and the remainder at [r2p, retval] }
function mpn_sqrtrem(r1p, r2p, sp: mpn_ptr; n: mp_size_t): mp_size_t; cdecl; external LIB name '__gmpn_sqrtrem';
{ Subtract [s2p, s2n] from [s1p, s1n], and write the s1n least significant limbs of the result to rp. Return borrow, either 0 or 1. }
function mpn_sub(rp, s1p: mpn_ptr; s1n: mp_size_t; s2p: mpn_ptr; s2n: mp_size_t): mp_limb_t; cdecl; external LIB name '__gmpn_sub';
{ Subtract s2limb from [s1p, n], and write the n least significant limbs of the result to rp. Return borrow, either 0 or 1. }
function mpn_sub_1(rp, s1p: mpn_ptr; n: mp_size_t; s2limb: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_sub_1';
{ Subtract [s2p, n] from [s1p, n], and write the n least significant limbs of the result to rp. Return borrow, either 0 or 1. }
function mpn_sub_n(rp, s1p, s2p: mpn_ptr; n: mp_size_t): mp_limb_t; cdecl; external LIB name '__gmpn_sub_n';
{ Multiply [s1p, n] and s2limb, and subtract the n least significant limbs of the product from [rp, n] and write the result to rp. Return the most significant limb of the product, plus borrow-out from the subtraction. }
function mpn_submul_1(rp, s1p: mpn_ptr; n: mp_size_t; s2limb: mp_limb_t): mp_limb_t; cdecl; external LIB name '__gmpn_submul_1';
{ Divide [np, nn] by [dp, dn] and put the quotient at [qp, nn−dn+1] and the remainder at [rp, dn] }
procedure mpn_tdiv_qr(qp, rp: mpn_ptr; qxn: mp_size_t; np: mpn_ptr; nn: mp_size_t; dp: mpn_ptr; dn: mp_size_t); cdecl; external LIB name '__gmpn_tdiv_qr';

// ---- GMP properties ----

{ Size of a limb on this machine }
function bits_per_limb: longint;
{ Some GMP functions may set this thread unsafe variable. Better avoid using it. }
function errno: longint;
{ GMP version string a.b.c }
function version: string;

// ==== ext bindings =====

// ---- Random Number Functions ----

{ Initialize state with a default algorithm }
procedure randinit_default(out state: MPRandState);
{ Initialize state with a linear congruential algorithm X = (aX + c) mod 2^m2exp }
procedure randinit_lc_2exp(out state: MPRandState; var a: MPInteger; c, m2exp: valuint);
{ Initialize state for a linear congruential algorithm as per gmp_randinit_lc_2exp }
function randinit_lc_2exp_size(out state: MPRandState; size: sizeuint): boolean;
{ Initialize state for a Mersenne Twister algorithm }
procedure randinit_mt(out state: MPRandState);
{ Initialize rop with a copy of the algorithm and state from op }
procedure randinit_set(out rop: MPRandState; var op: MPRandState);
{ Set an initial seed value into state }
procedure randseed(var state: MPRandState; var seed: MPInteger);
{ Set an initial seed value into state }
procedure randseed_ui(var state: MPRandState; seed: valuint);
{ Free all memory occupied by state }
procedure randclear(var state: MPRandState);
{ Return an uniformly distributed random number of n bits, ie. in the range 0 to 2^n−1 inclusive }
function urandomb_ui(var state: MPRandState; n: valuint): valuint;
{ Return an uniformly distributed random number in the range 0 to n − 1, inclusive }
function urandomm_ui(var state: MPRandState; n: valuint): valuint;

// ---- integer Functions ----
